feat: api user management
