# app/Models/User.php
@@ -7,6 +7,77 @@ use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 use Spatie\Permission\Traits\HasRoles;
 
+/**
+ * @OA\Schema(
+ *     schema="CreateUser",
+ *
+ *     @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="User Name"
+ *     ),
+ *     @OA\Property(
+ *          property="email",
+ *          type="string",
+ *          example="mail@mail.test"
+ *     ),
+ *     @OA\Property(
+ *          property="role_id",
+ *          type="integer",
+ *          example="1"
+ *     ),
+ *     @OA\Property(
+ *          property="is_active",
+ *          type="integer",
+ *          example="1"
+ *     ),
+ *     @OA\Property(
+ *          property="password",
+ *          type="string",
+ *          example="password"
+ *     ),
+ *     @OA\Property(
+ *          property="password_confirmation",
+ *          type="string",
+ *          example="password"
+ *     ),
+ * )
+ *
+ * @OA\Schema(
+ *     schema="UpdateUser",
+ *
+ *     @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="User Name"
+ *     ),
+ *     @OA\Property(
+ *          property="email",
+ *          type="string",
+ *          example="mail@mail.test"
+ *     ),
+ *     @OA\Property(
+ *          property="role_id",
+ *          type="integer",
+ *          example="1"
+ *     ),
+ *     @OA\Property(
+ *          property="is_active",
+ *          type="integer",
+ *          example="1"
+ *     ),
+ *     @OA\Property(
+ *          property="password",
+ *          type="string",
+ *          example="password"
+ *     ),
+ *     @OA\Property(
+ *          property="password_confirmation",
+ *          type="string",
+ *          example="password"
+ *     ),
+ * )
+ */
 class User extends Authenticatable
 {
     use HasApiTokens, HasRoles, Notifiable;
